updated spacing issue

--- a/public/main.styl
+++ b/public/main.styl
@@ -12,15 +12,15 @@ body
     .purple-box
       position absolute
       top calc(50% - 100px)
-      left calc(50% - 175px)
+      left calc(50% - 185px)
       background #E3D7EE
       color #4a0093
       padding 20px
       border-radius 5px
-      width 310px
+      width 330px
       height 160px
       .button
-        font-size 15px
+        font-size 10px
         background #b292d1
         padding-bottom 1px
         padding-top 1px
